--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,25 +6,26 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
-  --ifm-code-font-size: 95%;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+    --ifm-color-primary: #0b3d91; /* navy */
+    --ifm-color-primary-dark: #093474;
+    --ifm-color-primary-darker: #072b5b;
+    --ifm-color-primary-darkest: #051f3f;
+    --ifm-color-primary-light: #164ea0;
+    --ifm-color-primary-lighter: #2a61b3;
+    --ifm-color-primary-lightest: #3b76c6;
+    --ifm-code-font-size: 95%;
+    --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+    /* slightly lighter navy tones for readability in dark mode */
+    --ifm-color-primary: #4c6fb3;
+    --ifm-color-primary-dark: #415fa0;
+    --ifm-color-primary-darker: #365186;
+    --ifm-color-primary-darkest: #2b3f66;
+    --ifm-color-primary-light: #5b81c6;
+    --ifm-color-primary-lighter: #6b93d9;
+    --ifm-color-primary-lightest: #86aef1;
+    --docusaurus-highlighted-code-line-bg: rgba(255, 255, 255, 0.03);
 }
